# GitLurk

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: github_client.h
scripts/: build.sh
src/: CMakeLists.txt  github_client.cpp  main.cpp
src/aggregator/: CMakeLists.txt  event_aggregator.cpp  event_aggregator.h
src/client/: CMakeLists.txt  github_client.cpp  github_client.h  https_client.cpp  https_client.h
src/types/: CMakeLists.txt  github.h
